src/app/components/events-list/events-list.component.scss
// @import "~mdb-angular-ui-kit/assets/scss/mdb.scss";

@media(max-width: 567px) {
  ::ng-deep .owl-stage-outer {
    padding: 0% !important;
    margin-left: 3.5% !important;
  }
}

// ::ng-deep .owl-carousel-child {
//   margin: 0px !important;
// }


span.title {
  font-size: 12px;
}

span.bold {
  font-weight: 500;
  font-size: 13px;
  line-height: 10px;
}

span.lead {
  font-size: 10px;    
}

p.card-text {
  // line-height: 20px;
  text-overflow: ellipsis; 
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

h5.card-title {
  font-size: 1rem;
}

.display-6 {
  font-size: 1.2rem;
  font-weight: 500;
}

.btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
  padding-left: 25px;
}

.btn-group>:not(.btn-check)+.btn {
  padding-right: 25px;
}

.nav-link {
  color: #717171;
  font-weight: 500;
}

ul.nav {
  // border-top: 1px solid #ccc;
  // border-bottom: 1px solid #ccc;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: small;
}

.ev-padlr-0 {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.display-6 {
  font-weight: 600 !important;
  font-size: xx-large !important;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  border-radius: 30px !important;
  border: 1px solid var(--ev-brandname-darkblue) !important;
  background-color: var(--ev-brandname-darkblue) !important;
  color: var(--white) !important;
  // border-bottom: 2px solid var(--blue) !important;
}

.nav-pills .nav-link {
  border-radius: 30px !important;
  margin-left: 1rem !important;
  background-color: #eeeded;
  // border: 1px solid #717171 !important;
  color: #000 !important;
}

.controls-top a {
  color: #717171;
}

.ev-martop-5 {
  margin-top: 2.5% !important;
}

.ev-display-only-non-mobile {
  display: none;
}

.ev-display-only-mobile {
  display: none;
}

@media (max-width: 576px) {
  .ev-head-padl {
    padding-left: 4% !important;
  }
  .ev-display-only-non-mobile {
    display: none;
  }
  .ev-display-only-mobile {
    display: block;
  }
}

@media (min-width: 577px) {
  .ev-head-padl {
    padding-left: 1.5% !important;
  }
  .ev-display-only-non-mobile {
    display: block;
  }
  .ev-display-only-mobile {
    display: none;
  }
}

@media  (min-width: 992px) {
  .ev-head-padl {
    padding-left: 1.2% !important;
  }
}

@media (min-width: 1200px) {
  .ev-head-padl {
    padding-left: 0% !important;
  }
}

.card-img-top {
  width: 100%;
  height: 150px;
  border-bottom: 1px solid #f4f6f7;
  border-radius: 8px;
}

span.title {
  font-size: 12px;
}

span.bold {
  font-weight: bold;
  font-size: 16px;
  line-height: 24px;
}

span.lead {
  font-size: 14px;
}

p.card-text {
  line-height: 20px;
  min-height: 15vh;
  max-height: 15vh;
}

.display-6 {
  font-size: xx-large !important;
  font-weight: 600 !important;
}

.card {
  border-radius: 0px;
}

.btn-dark {
  background-color: #a1949c !important;
  border-color: #a1949c !important;
}

ul.nav {
  display: flex !important;overflow-x: auto;flex-direction: row; width: max-content !important;
}

.nav-item {
  display: inline-flex !important;
}

.items {
  margin: auto 8px;
  display: inline-flex;
  // width: 1300px;
}

.event-card{
  cursor: pointer;
  // box-shadow: 0 2px 3px rgba(0,0,0,.1);
  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 7%), 0 4px 6px -2px rgb(0 0 0 / 5%);
}

.card-title{
  text-overflow: ellipsis; 
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

// happening now text 
.happening_now_text {
  -moz-box-pack: justify !important;
  color: rgb(34, 34, 34) !important;
  display: flex !important;
  justify-content: space-between !important;
  margin-bottom: 16px !important;
}
.happening_now_text_core {
  margin-right: 24px !important;
  width: auto !important;
}
.happening_now_text_container {
  color: rgb(34, 34, 34) !important;
  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
  font-weight: 400 !important;
}
.happening_now_text_header {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
  font-size: 22px !important;
  line-height: 26px !important;
  font-weight: 600 !important;
}
.happening_now_show_more {
  -moz-box-align: center !important;
  display: flex !important;
  align-items: center !important;
  margin-left: auto !important;
}
.happening_now_show_more_link {
  font-size: inherit !important;
  font-family: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  line-height: inherit !important;
  color: #454545 !important;
  text-decoration: underline !important;
  border-radius: 4px !important;
  font-weight: 600 !important;
  outline: currentcolor none medium !important;
  font-size: 16px !important;
}
.happening_now_span_1 {
  display: inline-block !important;
  height: 32px !important;
  width: 1px !important;
  margin-right: 16px !important;
  padding: 0px !important;
  border: medium none !important;
}
.happening_now_slider {
  -moz-box-align: center !important;
  color: rgb(34, 34, 34) !important;
  display: flex !important;
  align-items: center !important;
  margin-left: auto !important;
}
.happening_now_slider_core {
  display: flex !important;
}
.happening_now_slider_button_core_inner {
  border: 0px none !important;
  clip: rect(0px, 0px, 0px, 0px) !important;
  clip-path: inset(100%) !important;
  height: 1px !important;
  overflow: hidden !important;
  padding: 0px !important;
  position: absolute !important;
  white-space: nowrap !important;
  width: 1px !important;
}

.happening_now_slider_button_core {
  position: relative !important;
}

.happening_now_slider_button::-moz-focus-inner {
  border: medium none !important;
  padding: 0px !important;
  margin: 0px !important;
}
.happening_now_slider_button::before {
  content: "" !important;
  display: block !important;
  position: absolute !important;
  top: 50% !important;
  left: 50% !important;
  transform: translate(-50%, -50%) !important;
  width: 32px !important;
  height: 32px !important;
  border-radius: 50% !important;
  background: rgb(255, 255, 255) none repeat scroll 0% 0% !important;
  border: 1px solid rgb(221, 221, 221) !important;
}
.happening_now_slider_button {
  -moz-box-pack: center !important;
  -moz-box-align: center !important;
  appearance: none !important;
  display: inline-flex !important;
  border-radius: 50% !important;
  border: medium none !important;
  outline: currentcolor none medium !important;
  margin: 0px !important;
  padding: 0px !important;
  color: rgb(34, 34, 34) !important;
  cursor: pointer !important;
  touch-action: manipulation !important;
  position: relative !important;
  background: transparent none repeat scroll 0% 0% !important;
  transition: -ms-transform 0.25s ease 0s, transform 0.25s ease 0s, transform 0.25s ease 0s !important;
  align-items: center !important;
  justify-content: center !important;
  width: 32px !important;
  height: 32px !important;
}

.happening_now_slider_empty_span {
  margin-left: 8px !important;
}

.save_live_event_div_container {
  -moz-box-pack: justify !important;
  position: absolute !important;
  right: 0% !important;
  display: block !important;
  justify-content: space-between !important;
  z-index: 99 !important;
}

.event-card:hover .event_social_share {
  visibility: visible !important;
}

// .event-card:hover .img-fit-img-fix-background-cover {
//   transform: scale(1.1);
//   -webkit-transform: scale(1.1);
// }

// .event-card:hover {
//   box-shadow: 0 10px 15px -3px rgba(0,0,0,.07),0 4px 6px -2px rgba(0,0,0,.05);
// }

.save_live_event_div, .event_social_share {
  pointer-events: auto !important;
  margin-top: -5px !important;
  margin-right: -3px !important;
  margin-bottom: 15px !important;
}

.event_social_share:hover {
  visibility: visible !important;
}

.save_live_event_button {
  -moz-box-pack: center !important;
  -moz-box-align: center !important;
  cursor: pointer !important;
  position: relative !important;
  text-align: center !important;
  text-decoration: none !important;
  // background: transparent none repeat scroll 0% 0% !important;
  background: #3332 !important;
  touch-action: manipulation !important;
  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
  font-size: 16px !important;
  line-height: 20px !important;
  font-weight: 600 !important;
  border-radius: 50% !important;
  outline: currentcolor none medium !important;
  padding: 2px 0px 0px !important;
  transition: -ms-transform 0.25s ease 0s, transform 0.25s ease 0s, transform 0.25s ease 0s !important;
  display: inline-flex !important;
  align-items: center !important;
  justify-content: center !important;
  border: medium none !important;
  color: #222 !important;
  margin: 0px !important;
  width: 26px !important;
  height: 26px !important;
}


.btn-dark {
  background-color: #1e0a3c !important;
  border: none !important;
}

.spinner-border {
  margin-bottom: .5vh;
}

.text-muted {
  font-weight: 400 !important;
}

@media(min-width: 1500px) {
  p.card-text {
    min-height: 12vh !important;
  }
}

@media(min-width: 567px) {
  ::ng-deep .row {
    --bs-gutter-x:  1. !important;
  }
  ::ng-deep .owl-carousel-child {
      margin: 0px !important;
    }
    
}

.img-fit-img-fix-background-cover {
  border-radius: 0px;
	background-position: 50%;
	background-repeat: no-repeat;
	background-size: cover;
	height: 100%;
}

.price-span {
    position: absolute;
    right: 0;
    background-color: rgba(0, 0, 0, 0.41);
    backdrop-filter: blur(5px);
    bottom: 0px;
    padding: 5px 10px;
    font-size: 12px;
    border-end-end-radius: 0px;
    color: #fff;
    border-start-start-radius: 10px;
}

@media (max-height: 500px) and (orientation : landscape) {
    .img-fit-img-fix-background-cover {
      height: 50vh !important;
    }
}

@media (max-width: 1400px) and (min-height: 900px) {
  .img-fit-img-fix-background-cover {
    height: 30vh !important;
  }
}

@media (max-width: 1400px) and (max-height: 900px) {
  .img-fit-img-fix-background-cover {
    height: 30vh !important;
  }
}

.card-body {
    padding: 0 !important;
}

@media (max-width: 567px) and (orientation: portrait) {
  .controls-top {
    padding-top: 0vh;
  }
  .event_social_share {
    visibility: visible !important;
  }
  .display-6 {
    font-size: x-large !important;
  }
}


@media (max-height: 567px) and (orientation: landscape) {
  .controls-top {
    padding-top: 1vh;
  }
  .event_social_share {
    visibility: visible !important;
  }
}

@media (max-width: 967px) and (orientation: portrait) {
  .event_social_share {
    visibility: visible !important;
  }
  .swipeable-x {
    overflow-x: scroll;
  }
}


@media (max-height: 967px) and (orientation: landscape) {
  .event_social_share {
    visibility: visible !important;
  }
}

